@@ -23,7 +23,9 @@ package com.hedera.services.state.submerkle;
 import com.google.common.base.MoreObjects;
 import com.google.protobuf.ByteString;
 import com.hedera.services.legacy.core.jproto.TxnReceipt;
+import com.hedera.services.state.merkle.internals.BitPackUtils;
 import com.hedera.services.state.serdes.DomainSerdes;
+import com.hederahashgraph.api.proto.java.ResponseCodeEnum;
 import com.hederahashgraph.api.proto.java.TokenTransferList;
 import com.hederahashgraph.api.proto.java.TransactionRecord;
 import com.swirlds.common.CommonUtils;
@@ -33,18 +35,24 @@ import com.swirlds.common.io.SerializableDataOutputStream;
 import com.swirlds.fcqueue.FCQueueElement;
 
 import java.io.IOException;
+import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.IntStream;
 
+import static com.hedera.services.state.merkle.internals.BitPackUtils.packedTime;
+import static com.hedera.services.utils.MiscUtils.asTimestamp;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 
 public class ExpirableTxnRecord implements FCQueueElement {
 	public static final long UNKNOWN_SUBMITTING_MEMBER = -1;
+	public static final long MISSING_PARENT_CONSENSUS_TIMESTAMP = -1;
+	public static final short NO_CHILD_TRANSACTIONS = 0;
+
 	static final List<EntityId> NO_TOKENS = null;
 	static final List<CurrencyAdjustments> NO_TOKEN_ADJUSTMENTS = null;
 	static final List<NftAdjustments> NO_NFT_TOKEN_ADJUSTMENTS = null;
@@ -57,13 +65,15 @@ public class ExpirableTxnRecord implements FCQueueElement {
 	static final int RELEASE_0120_VERSION = 3;
 	static final int RELEASE_0160_VERSION = 4;
 	static final int RELEASE_0180_VERSION = 5;
-	static final int MERKLE_VERSION = RELEASE_0180_VERSION;
+	static final int RELEASE_0210_VERSION = 6;
+	static final int MERKLE_VERSION = RELEASE_0210_VERSION;
 
 	static final int MAX_MEMO_BYTES = 32 * 1_024;
 	static final int MAX_TXN_HASH_BYTES = 1_024;
 	static final int MAX_INVOLVED_TOKENS = 10;
 	static final int MAX_ASSESSED_CUSTOM_FEES_CHANGES = 20;
 	static final long RUNTIME_CONSTRUCTABLE_ID = 0x8b9ede7ca8d8db93L;
+	public static final ByteString MISSING_ALIAS = ByteString.EMPTY;
 
 	static DomainSerdes serdes = new DomainSerdes();
 
@@ -71,6 +81,8 @@ public class ExpirableTxnRecord implements FCQueueElement {
 	private long submittingMember = UNKNOWN_SUBMITTING_MEMBER;
 
 	private long fee;
+	private long packedParentConsensusTime = MISSING_PARENT_CONSENSUS_TIMESTAMP;
+	private short numChildRecords = NO_CHILD_TRANSACTIONS;
 	private Hash hash;
 	private TxnId txnId;
 	private byte[] txnHash = MISSING_TXN_HASH;
@@ -80,12 +92,19 @@ public class ExpirableTxnRecord implements FCQueueElement {
 	private CurrencyAdjustments hbarAdjustments;
 	private SolidityFnResult contractCallResult;
 	private SolidityFnResult contractCreateResult;
+	/* IMPORTANT: This class depends on the invariant that if any of the
+	three token-related lists below (tokens, tokenAdjustments, and
+	nftTokenAdjustments) is non-null, then it has the same length as any
+	other non-null list. This would not be necessary if we provided the
+	class with information on the fungibility of the token types---and
+	this information is always available when the Builder is constructed. */
 	private List<EntityId> tokens = NO_TOKENS;
 	private List<CurrencyAdjustments> tokenAdjustments = NO_TOKEN_ADJUSTMENTS;
 	private List<NftAdjustments> nftTokenAdjustments = NO_NFT_TOKEN_ADJUSTMENTS;
 	private EntityId scheduleRef = NO_SCHEDULE_REF;
 	private List<FcAssessedCustomFee> assessedCustomFees = NO_CUSTOM_FEES;
 	private List<FcTokenAssociation> newTokenAssociations = NO_NEW_TOKEN_ASSOCIATIONS;
+	private ByteString alias = MISSING_ALIAS;
 
 	@Override
 	public void release() {
@@ -93,10 +112,11 @@ public class ExpirableTxnRecord implements FCQueueElement {
 	}
 
 	public ExpirableTxnRecord() {
+		/* RuntimeConstructable */
 	}
 
 	public ExpirableTxnRecord(Builder builder) {
-		this.receipt = builder.receipt;
+		this.receipt = (builder.receiptBuilder != null) ? builder.receiptBuilder.build() : builder.receipt;
 		this.txnHash = builder.txnHash;
 		this.txnId = builder.txnId;
 		this.consensusTimestamp = builder.consensusTime;
@@ -108,10 +128,12 @@ public class ExpirableTxnRecord implements FCQueueElement {
 		this.tokens = builder.tokens;
 		this.tokenAdjustments = builder.tokenAdjustments;
 		this.nftTokenAdjustments = builder.nftTokenAdjustments;
-
 		this.scheduleRef = builder.scheduleRef;
 		this.assessedCustomFees = builder.assessedCustomFees;
 		this.newTokenAssociations = new ArrayList<>(builder.newTokenAssociations);
+		this.packedParentConsensusTime = builder.packedParentConsensusTime;
+		this.numChildRecords = builder.numChildRecords;
+		this.alias = builder.alias;
 	}
 
 	/* --- Object --- */
@@ -119,6 +141,7 @@ public class ExpirableTxnRecord implements FCQueueElement {
 	public String toString() {
 		var helper = MoreObjects.toStringHelper(this)
 				.omitNullValues()
+				.add("numChildRecords", numChildRecords)
 				.add("receipt", receipt)
 				.add("fee", fee)
 				.add("txnHash", CommonUtils.hex(txnHash))
@@ -130,7 +153,14 @@ public class ExpirableTxnRecord implements FCQueueElement {
 				.add("contractCreation", contractCreateResult)
 				.add("contractCall", contractCallResult)
 				.add("hbarAdjustments", hbarAdjustments)
-				.add("scheduleRef", scheduleRef);
+				.add("scheduleRef", scheduleRef)
+				.add("alias", alias.toStringUtf8());
+
+		if (packedParentConsensusTime != MISSING_PARENT_CONSENSUS_TIMESTAMP) {
+			helper.add("parentConsensusTime", Instant.ofEpochSecond(
+					BitPackUtils.unsignedHighOrder32From(packedParentConsensusTime),
+					BitPackUtils.signedLowOrder32From(packedParentConsensusTime)));
+		}
 
 		if (tokens != NO_TOKENS) {
 			int n = tokens.size();
@@ -138,25 +168,34 @@ public class ExpirableTxnRecord implements FCQueueElement {
 					.mapToObj(i -> String.format(
 							"%s(%s)",
 							tokens.get(i).toAbbrevString(),
-							tokenAdjustments.get(i)))
+							reprOfNonEmptyChange(i, tokenAdjustments, nftTokenAdjustments)))
 					.collect(joining(", "));
 			helper.add("tokenAdjustments", readable);
 		}
 
 		if (assessedCustomFees != NO_CUSTOM_FEES) {
 			var readable = assessedCustomFees.stream().map(
-					assessedCustomFee -> String.format("(%s)", assessedCustomFee))
+							assessedCustomFee -> String.format("(%s)", assessedCustomFee))
 					.collect(joining(", "));
 			helper.add("assessedCustomFees", readable);
 		}
 
 		if (newTokenAssociations != NO_NEW_TOKEN_ASSOCIATIONS) {
 			var readable = newTokenAssociations.stream().map(
-					newTokenAssociation -> String.format("(%s)", newTokenAssociation))
+							newTokenAssociation -> String.format("(%s)", newTokenAssociation))
 					.collect(joining(", "));
 			helper.add("newTokenAssociations", readable);
 		}
 		return helper.toString();
+	}
+
+	private String reprOfNonEmptyChange(
+			final int i,
+			final List<CurrencyAdjustments> tokenAdjustments,
+			final List<NftAdjustments> nftTokenAdjustments
+	) {
+		final var fungibleAdjust = tokenAdjustments.get(i);
+		return fungibleAdjust.isEmpty() ? nftTokenAdjustments.get(i).toString() : fungibleAdjust.toString();
 	}
 
 	@Override
@@ -168,7 +207,9 @@ public class ExpirableTxnRecord implements FCQueueElement {
 			return false;
 		}
 		var that = (ExpirableTxnRecord) o;
-		return fee == that.fee &&
+		return this.fee == that.fee &&
+				this.numChildRecords == that.numChildRecords &&
+				this.packedParentConsensusTime == that.packedParentConsensusTime &&
 				this.expiry == that.expiry &&
 				this.submittingMember == that.submittingMember &&
 				Objects.equals(this.receipt, that.receipt) &&
@@ -183,7 +224,8 @@ public class ExpirableTxnRecord implements FCQueueElement {
 				Objects.equals(this.tokenAdjustments, that.tokenAdjustments) &&
 				Objects.equals(this.nftTokenAdjustments, that.nftTokenAdjustments) &&
 				Objects.equals(this.assessedCustomFees, that.assessedCustomFees) &&
-				Objects.equals(this.newTokenAssociations, that.newTokenAssociations);
+				Objects.equals(this.newTokenAssociations, that.newTokenAssociations) &&
+				Objects.equals(this.alias, that.alias);
 	}
 
 	@Override
@@ -204,7 +246,10 @@ public class ExpirableTxnRecord implements FCQueueElement {
 				nftTokenAdjustments,
 				scheduleRef,
 				assessedCustomFees,
-				newTokenAssociations);
+				newTokenAssociations,
+				numChildRecords,
+				packedParentConsensusTime,
+				alias);
 		return result * 31 + Arrays.hashCode(txnHash);
 	}
 
@@ -245,6 +290,21 @@ public class ExpirableTxnRecord implements FCQueueElement {
 		out.writeSerializableList(nftTokenAdjustments, true, true);
 		out.writeSerializableList(assessedCustomFees, true, true);
 		out.writeSerializableList(newTokenAssociations, true, true);
+
+		if (numChildRecords != NO_CHILD_TRANSACTIONS) {
+			out.writeBoolean(true);
+			out.writeShort(numChildRecords);
+		} else {
+			out.writeBoolean(false);
+		}
+
+		if (packedParentConsensusTime != MISSING_PARENT_CONSENSUS_TIMESTAMP) {
+			out.writeBoolean(true);
+			out.writeLong(packedParentConsensusTime);
+		} else {
+			out.writeBoolean(false);
+		}
+		out.writeByteArray(alias.toByteArray());
 	}
 
 	@Override
@@ -262,14 +322,42 @@ public class ExpirableTxnRecord implements FCQueueElement {
 		submittingMember = in.readLong();
 		/* Tokens present since v0.7.0 */
 		tokens = in.readSerializableList(MAX_INVOLVED_TOKENS);
-		tokenAdjustments = in.readSerializableList(MAX_INVOLVED_TOKENS); /* Schedule references present since v0.8.0 */
+		tokenAdjustments = in.readSerializableList(MAX_INVOLVED_TOKENS);
+		/* Schedule references present since v0.8.0 */
 		scheduleRef = serdes.readNullableSerializable(in);
 		if (version >= RELEASE_0160_VERSION) {
 			nftTokenAdjustments = in.readSerializableList(MAX_INVOLVED_TOKENS);
 			assessedCustomFees = in.readSerializableList(MAX_ASSESSED_CUSTOM_FEES_CHANGES);
+		} else {
+			/* Can be removed once we triple-check no tests depend on a 0.16.x state */
+			nftTokenAdjustments = makeupNftAdjustsMatching(tokenAdjustments);
+			assessedCustomFees = NO_CUSTOM_FEES;
 		}
 		if (version >= RELEASE_0180_VERSION) {
 			newTokenAssociations = in.readSerializableList(Integer.MAX_VALUE);
+		}
+		if (version >= RELEASE_0210_VERSION) {
+			final var hasChildRecords = in.readBoolean();
+			if (hasChildRecords) {
+				numChildRecords = in.readShort();
+			}
+			final var hasParentConsensusTime = in.readBoolean();
+			if (hasParentConsensusTime) {
+				packedParentConsensusTime = in.readLong();
+			}
+			alias = ByteString.copyFrom(in.readByteArray(Integer.MAX_VALUE));
+		}
+	}
+
+	List<NftAdjustments> makeupNftAdjustsMatching(final List<CurrencyAdjustments> fungibleAdjusts) {
+		if (fungibleAdjusts == null) {
+			return null;
+		} else {
+			final List<NftAdjustments> ans = new ArrayList<>();
+			for (int i = 0, n = fungibleAdjusts.size(); i < n; i++) {
+				ans.add(new NftAdjustments());
+			}
+			return ans;
 		}
 	}
 
@@ -284,7 +372,6 @@ public class ExpirableTxnRecord implements FCQueueElement {
 	}
 
 	/* --- Object --- */
-
 	public EntityId getScheduleRef() {
 		return scheduleRef;
 	}
@@ -305,6 +392,10 @@ public class ExpirableTxnRecord implements FCQueueElement {
 		return receipt;
 	}
 
+	public ResponseCodeEnum getEnumStatus() {
+		return receipt.getEnumStatus();
+	}
+
 	public byte[] getTxnHash() {
 		return txnHash;
 	}
@@ -315,6 +406,10 @@ public class ExpirableTxnRecord implements FCQueueElement {
 
 	public RichInstant getConsensusTimestamp() {
 		return consensusTimestamp;
+	}
+
+	public long getConsensusSecond() {
+		return consensusTimestamp.getSeconds();
 	}
 
 	public String getMemo() {
@@ -361,8 +456,31 @@ public class ExpirableTxnRecord implements FCQueueElement {
 		return newTokenAssociations;
 	}
 
-	/* --- FastCopyable --- */
+	public short getNumChildRecords() {
+		return numChildRecords;
+	}
 
+	public void setNumChildRecords(final short numChildRecords) {
+		this.numChildRecords = numChildRecords;
+	}
+
+	public long getPackedParentConsensusTime() {
+		return packedParentConsensusTime;
+	}
+
+	public void setPackedParentConsensusTime(final long packedParentConsensusTime) {
+		this.packedParentConsensusTime = packedParentConsensusTime;
+	}
+
+	public ByteString getAlias() {
+		return alias;
+	}
+
+	public void setAlias(final ByteString alias) {
+		this.alias = alias;
+	}
+
+	/* --- FastCopyable --- */
 	@Override
 	public boolean isImmutable() {
 		return true;
@@ -376,14 +494,13 @@ public class ExpirableTxnRecord implements FCQueueElement {
 	public static List<TransactionRecord> allToGrpc(List<ExpirableTxnRecord> records) {
 		return records.stream()
 				.map(ExpirableTxnRecord::asGrpc)
-				.collect(toList());
+				.toList();
 	}
 
 	public TransactionRecord asGrpc() {
 		var grpc = TransactionRecord.newBuilder();
 
 		grpc.setTransactionFee(fee);
-
 		if (receipt != null) {
 			grpc.setReceipt(TxnReceipt.convert(receipt));
 		}
@@ -411,24 +528,26 @@ public class ExpirableTxnRecord implements FCQueueElement {
 		if (tokens != NO_TOKENS) {
 			setGrpcTokens(grpc, tokens, tokenAdjustments, nftTokenAdjustments);
 		}
-
 		if (scheduleRef != NO_SCHEDULE_REF) {
 			grpc.setScheduleRef(scheduleRef.toGrpcScheduleId());
 		}
-
 		if (assessedCustomFees != NO_CUSTOM_FEES) {
 			grpc.addAllAssessedCustomFees(
-					assessedCustomFees.stream().map(FcAssessedCustomFee::toGrpc).collect(toList()));
+					assessedCustomFees.stream().map(FcAssessedCustomFee::toGrpc).toList());
 		}
-
 		if (newTokenAssociations != NO_NEW_TOKEN_ASSOCIATIONS) {
 			grpc.addAllAutomaticTokenAssociations(
-					newTokenAssociations.stream().map(FcTokenAssociation::toGrpc).collect(toList()));
+					newTokenAssociations.stream().map(FcTokenAssociation::toGrpc).toList());
+		}
+		if (alias != MISSING_ALIAS) {
+			grpc.setAlias(alias);
+		}
+		if (packedParentConsensusTime != MISSING_PARENT_CONSENSUS_TIMESTAMP) {
+			grpc.setParentConsensusTimestamp(asTimestamp(packedParentConsensusTime));
 		}
 
 		return grpc.build();
 	}
-
 
 	private static void setGrpcTokens(TransactionRecord.Builder grpcBuilder,
 			final List<EntityId> tokens,
@@ -453,11 +572,15 @@ public class ExpirableTxnRecord implements FCQueueElement {
 
 	public static class Builder {
 		private TxnReceipt receipt;
+		private TxnReceipt.Builder receiptBuilder;
+
 		private byte[] txnHash;
 		private TxnId txnId;
 		private RichInstant consensusTime;
 		private String memo;
 		private long fee;
+		private long packedParentConsensusTime = MISSING_PARENT_CONSENSUS_TIMESTAMP;
+		private short numChildRecords = NO_CHILD_TRANSACTIONS;
 		private CurrencyAdjustments transferList;
 		private SolidityFnResult contractCallResult;
 		private SolidityFnResult contractCreateResult;
@@ -467,6 +590,7 @@ public class ExpirableTxnRecord implements FCQueueElement {
 		private EntityId scheduleRef;
 		private List<FcAssessedCustomFee> assessedCustomFees;
 		private List<FcTokenAssociation> newTokenAssociations = NO_NEW_TOKEN_ASSOCIATIONS;
+		private ByteString alias = MISSING_ALIAS;
 
 		public Builder setFee(long fee) {
 			this.fee = fee;
@@ -490,6 +614,11 @@ public class ExpirableTxnRecord implements FCQueueElement {
 
 		public Builder setReceipt(TxnReceipt receipt) {
 			this.receipt = receipt;
+			return this;
+		}
+
+		public Builder setReceiptBuilder(TxnReceipt.Builder receiptBuilder) {
+			this.receiptBuilder = receiptBuilder;
 			return this;
 		}
 
@@ -533,7 +662,7 @@ public class ExpirableTxnRecord implements FCQueueElement {
 			return this;
 		}
 
-		public Builder setCustomFeesCharged(List<FcAssessedCustomFee> assessedCustomFees) {
+		public Builder setAssessedCustomFees(List<FcAssessedCustomFee> assessedCustomFees) {
 			this.assessedCustomFees = assessedCustomFees;
 			return this;
 		}
@@ -543,17 +672,104 @@ public class ExpirableTxnRecord implements FCQueueElement {
 			return this;
 		}
 
+		public Builder setParentConsensusTime(final Instant consTime) {
+			this.packedParentConsensusTime = packedTime(consTime.getEpochSecond(), consTime.getNano());
+			return this;
+		}
+
+		public Builder setNumChildRecords(final short numChildRecords) {
+			this.numChildRecords = numChildRecords;
+			return this;
+		}
+
+		public Builder setAlias(ByteString alias) {
+			this.alias = alias;
+			return this;
+		}
+
 		public ExpirableTxnRecord build() {
 			return new ExpirableTxnRecord(this);
 		}
 
-		public Builder clear() {
+		public Builder reset() {
 			fee = 0;
 			txnId = null;
 			txnHash = MISSING_TXN_HASH;
 			memo = null;
 			receipt = null;
 			consensusTime = null;
+
+			nullOutSideEffectFields();
+
+			return this;
+		}
+
+		public void revert() {
+			if (receiptBuilder == null) {
+				throw new IllegalStateException("Cannot revert a record with a built receipt");
+			}
+			receiptBuilder.revert();
+			nullOutSideEffectFields();
+		}
+
+		public void excludeHbarChangesFrom(final ExpirableTxnRecord.Builder that) {
+			if (that.transferList == null) {
+				return;
+			}
+
+			final var adjustsHere = this.transferList.hbars.length;
+			final var adjustsThere = that.transferList.hbars.length;
+			final var maxAdjusts = adjustsHere + adjustsThere;
+			final var changedHere = this.transferList.accountIds;
+			final var changedThere = that.transferList.accountIds;
+
+			final var netAdjustsHere = new long[maxAdjusts];
+			final List<EntityId> netChanged = new ArrayList<>();
+
+			var i = 0;
+			var j = 0;
+			var k = 0;
+			while (i < adjustsHere && j < adjustsThere) {
+				final var iId = changedHere.get(i);
+				final var jId = changedThere.get(j);
+				final var cmp = ID_CMP.compare(iId, jId);
+				if (cmp == 0) {
+					final var net = this.transferList.hbars[i++] - that.transferList.hbars[j++];
+					if (net != 0) {
+						netAdjustsHere[k++] = net;
+						netChanged.add(iId);
+					}
+				} else if (cmp < 0) {
+					netAdjustsHere[k++] = this.transferList.hbars[i++];
+					netChanged.add(iId);
+				} else {
+					netAdjustsHere[k++] = -that.transferList.hbars[j++];
+					netChanged.add(jId);
+				}
+			}
+			/* Note that at most one of these loops can iterate a non-zero number of times,
+			 * since if both did we could not have exited the prior loop. */
+			while (i < adjustsHere) {
+				final var iId = changedHere.get(i);
+				netAdjustsHere[k++] = this.transferList.hbars[i++];
+				netChanged.add(iId);
+			}
+			while (j < adjustsThere) {
+				final var jId = changedThere.get(j);
+				netAdjustsHere[k++] = -that.transferList.hbars[j++];
+				netChanged.add(jId);
+			}
+
+			this.transferList.hbars = Arrays.copyOfRange(netAdjustsHere, 0, k);
+			this.transferList.accountIds = netChanged;
+		}
+
+		public static final Comparator<EntityId> ID_CMP = Comparator
+				.comparingLong(EntityId::num)
+				.thenComparingLong(EntityId::shard)
+				.thenComparingLong(EntityId::realm);
+
+		private void nullOutSideEffectFields() {
 			transferList = null;
 			contractCallResult = null;
 			contractCreateResult = null;
@@ -563,7 +779,64 @@ public class ExpirableTxnRecord implements FCQueueElement {
 			scheduleRef = NO_SCHEDULE_REF;
 			assessedCustomFees = NO_CUSTOM_FEES;
 			newTokenAssociations = NO_NEW_TOKEN_ASSOCIATIONS;
-			return this;
+			alias = MISSING_ALIAS;
 		}
+
+		public CurrencyAdjustments getTransferList() {
+			return transferList;
+		}
+
+		public SolidityFnResult getContractCallResult() {
+			return contractCallResult;
+		}
+
+		public SolidityFnResult getContractCreateResult() {
+			return contractCreateResult;
+		}
+
+		public List<EntityId> getTokens() {
+			return tokens;
+		}
+
+		public List<CurrencyAdjustments> getTokenAdjustments() {
+			return tokenAdjustments;
+		}
+
+		public List<NftAdjustments> getNftTokenAdjustments() {
+			return nftTokenAdjustments;
+		}
+
+		public EntityId getScheduleRef() {
+			return scheduleRef;
+		}
+
+		public List<FcAssessedCustomFee> getAssessedCustomFees() {
+			return assessedCustomFees;
+		}
+
+		public List<FcTokenAssociation> getNewTokenAssociations() {
+			return newTokenAssociations;
+		}
+
+		public TxnReceipt.Builder getReceiptBuilder() {
+			return receiptBuilder;
+		}
+
+		public byte[] getTxnHash() {
+			return txnHash;
+		}
+
+		public TxnId getTxnId() {
+			return txnId;
+		}
+
+		public ByteString getAlias() {
+			return alias;
+		}
+	}
+
+	/* --- Only used by unit tests --- */
+	void setNewTokenAssociations(final List<FcTokenAssociation> newTokenAssociations) {
+		this.newTokenAssociations = newTokenAssociations;
 	}
 }
